Fixed a bug with appearing scrollbar while opening menu

--- a/src/css/Menu.css
+++ b/src/css/Menu.css
@@ -44,6 +44,24 @@
     font-weight: 300;
 }
 
+.menu-icon-container {
+    display: flex;
+    flex-direction: column;
+    width: 40px;
+    padding: 10px;
+    gap: 30px;
+    position: fixed;
+    bottom: 0%;
+    right: 0%;
+    opacity: 0%;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.menu-item-icon {
+    width: 100%;
+    height: 100%;
+}
+
 
 /* Extra Small (XS) - Mobile Phones */
 @media (max-width: 575px) {
